--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
 
+
+
+
+
+
+
+
+
+<div class="caixa-principal">
+  <h1>Você decide seu futuro</h1>
+<div class="caixa-perguntas"></div>
+<div class="caixa-alternativas"></div>
+<div class="caixa-resultado">
+    <p class="texto-resultado"></p>
+
+
+
+
+
+
+  
